[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/main/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/player/art/chest.png" type="Texture" id=2]
[ext_resource path="res://src/main/art/border_bar-complete.png" type="Texture" id=3]
[ext_resource path="res://src/main/LevelButton.gd" type="Script" id=4]

[node name="LevelButton" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -966.0
margin_bottom = -625.0
size_flags_horizontal = 7
size_flags_vertical = 7
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 313.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelButton" type="Button" parent="VBoxContainer"]
margin_right = 313.0
margin_bottom = 44.0
text = "Level 1"

[node name="LevelTextureButton" type="TextureButton" parent="VBoxContainer"]
visible = false
margin_right = 128.0
margin_bottom = 64.0
rect_min_size = Vector2( 128, 64 )
size_flags_horizontal = 3
size_flags_vertical = 2
texture_normal = ExtResource( 3 )
expand = true

[node name="TimeLabel" type="Label" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 313.0
margin_bottom = 92.0
text = "Best Time: 0.0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChestIcon" type="TextureRect" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 313.0
margin_bottom = 128.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[connection signal="pressed" from="VBoxContainer/LevelButton" to="." method="_on_LevelButton_pressed"]
